[package]
name = "common_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.192"
serde_json = "1.0.108"

async-trait = "0.1.74"

# TODO: stop using error from lambda_runtime
lambda_runtime = "0.14.1"
tokio = { version = "1", features = ["full"] }
rand = "0.9.0"
regex = "1.10.2"
chrono = "0.4.31"

tracing = { version = "0.1.40", features = ["log"] }

aws-config = "1.0.0"
aws-sdk-lambda = "1.3.0"
aws-sdk-sqs = "1.3.0"
aws-sdk-dynamodb = "1.3.0"
aws-sdk-cloudwatchlogs = "1.3.0"

[dev-dependencies]
testcontainers = "0.24.0"