[package]
name = "function-deployer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = "0.17.0"
lambda_runtime = "0.14.1"

async-trait = "0.1.74"

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }

tokio = { version = "1", features = ["full"] }

common_lib = { path = "../common_lib" }

