[package]
name = "function-invoker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = "0.16.0"
lambda_runtime = "0.13.0"
serde = "1.0.192"
serde_json = "1.0.108"

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }

tokio = { version = "1", features = ["full"] }

common_lib = { path = "../common_lib" }

