[package]
name = "function-invoker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
aws_lambda_events = "1.0.1"
lambda_runtime = "1.0.1"
serde = "1.0.192"
serde_json = "1.0.108"

tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["json"] }

tokio = { version = "1", features = ["full"] }

common_lib = { path = "../common_lib" }

