[package]
name = "function-trigger-deployer-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
lambda_runtime = "0.13.0"

serde = "1.0.192"
serde_json = "1.0.108"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1.74"

tracing-subscriber = "0.3.18"
tracing = { version = "0.1.40", features = ["log"] }

common_lib = { path = "../common_lib" }
